# ros2_medkit

./: .clang-format  .clang-tidy  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  QUALITY_DECLARATION.md  README.md  SECURITY.md  codecov.yml  package.xml  pixi.toml  setup.cfg  tracks.yaml  tsan_suppressions.txt
docs/: Doxyfile  README.md  changelog.rst  conf.py  getting_started.rst  glossary.rst  index.rst  installation.rst  introduction.rst  pyproject.toml  roadmap.rst  troubleshooting.rst  verification.rst
docs/_static/: custom.css
docs/api/: cpp.rst  index.rst  locking.rst  messages.rst  rest.rst  warning_codes.rst
docs/config/: aggregation.rst  diagnostic-bridge.rst  discovery-options.rst  fault-manager.rst  graph-provider.rst  index.rst  manifest-schema.rst  server.rst
docs/design/: aggregation.rst  architecture.puml  index.rst  ros2_medkit_beacon_common  ros2_medkit_cmake  ros2_medkit_diagnostic_bridge  ros2_medkit_fault_manager  ros2_medkit_fault_reporter  ros2_medkit_gateway  ros2_medkit_graph_provider  ros2_medkit_integration_tests  ros2_medkit_linux_introspection  ros2_medkit_msgs  ros2_medkit_param_beacon  ros2_medkit_serialization  ros2_medkit_sovd_service_interface  ros2_medkit_topic_beacon
docs/design/ros2_medkit_fault_detection/: index.rst
docs/design/ros2_medkit_opcua/: index.rst
docs/plans/: 2026-03-15-function-cyclic-subscriptions-design.md  2026-03-15-function-cyclic-subscriptions.md  2026-03-16-discovery-handlers-tests-design.md  2026-03-16-discovery-handlers-tests.md
docs/requirements/: configuration.rst  core.rst  coverage.rst  data.rst  diagnostics.rst  execution.rst  index.rst  system.rst
docs/requirements/specs/: auth.rst  bulkdata.rst  cleardata.rst  commlogs.rst  configuration.rst  data.rst  datasets.rst  discovery.rst  faults.rst  index.rst  lifecycle.rst  locking.rst  logs.rst  modes.rst  operations.rst  scripts.rst  subscriptions.rst  updates.rst
docs/tutorials/: attach-existing-stack.rst  authentication.rst  beacon-discovery.rst  bringup.rst  custom_areas.rst  devcontainer.rst  docker.rst  fault-correlation.rst  graph-provider.rst  heuristic-apps.rst  https.rst  index.rst  integration.rst  linux-introspection.rst  locking.rst  manifest-discovery.rst  mcp-server.rst  migration-to-manifest.rst  multi-instance.rst  openapi.rst  plugin-system.rst  scripts.rst  snapshots.rst  triggers-use-cases.rst  web-ui.rst
docs/tutorials/demos/: demo-quick-start.rst  demo-sensor.rst  demo-turtlebot3.rst  index.rst
src/ros2_diag_tree_gateway/: CMakeLists.txt  README.md  package.xml
src/ros2_diag_tree_gateway/src/: gateway_node.cpp
src/ros2_diag_tree_gateway/test/: test_gateway_node.cpp
src/ros2_medkit_cmake/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_cmake/cmake/: ROS2MedkitCcache.cmake  ROS2MedkitCompat.cmake  ROS2MedkitLinting.cmake  ROS2MedkitSanitizers.cmake  ROS2MedkitTestDomain.cmake  ROS2MedkitWarnings.cmake  ros2_medkit_cmake-extras.cmake
src/ros2_medkit_cmake/design/: index.rst
src/ros2_medkit_diagnostic_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_diagnostic_bridge/config/: diagnostic_bridge.yaml
src/ros2_medkit_diagnostic_bridge/design/: index.rst
src/ros2_medkit_diagnostic_bridge/launch/: diagnostic_bridge.launch.py
src/ros2_medkit_diagnostic_bridge/src/: diagnostic_bridge_node.cpp  main.cpp
src/ros2_medkit_diagnostic_bridge/test/: test_diagnostic_bridge.cpp  test_integration.test.py
src/ros2_medkit_discovery_plugins/ros2_medkit_beacon_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ros2_medkit_discovery_plugins/ros2_medkit_linux_introspection/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_discovery_plugins/ros2_medkit_param_beacon/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_discovery_plugins/ros2_medkit_topic_beacon/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_fault_detection/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_fault_detection/test/: test_fault_detection.cpp
src/ros2_medkit_fault_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_fault_manager/config/: fault_manager.yaml  snapshots.yaml
src/ros2_medkit_fault_manager/design/: architecture.puml  index.rst
src/ros2_medkit_fault_manager/launch/: fault_manager.launch.py
src/ros2_medkit_fault_manager/src/: capture_thread_pool.cpp  entity_threshold_resolver.cpp  fault_audit_log.cpp  fault_manager_node.cpp  fault_storage.cpp  main.cpp  rosbag_capture.cpp  snapshot_capture.cpp  sqlite_fault_storage.cpp
src/ros2_medkit_fault_manager/test/: test_capture_thread_pool.cpp  test_correlation_config_parser.cpp  test_correlation_engine.cpp  test_entity_thresholds.cpp  test_entity_thresholds_integration.test.py  test_fault_audit_log.cpp  test_fault_manager.cpp  test_integration.test.py  test_pattern_matcher.cpp  test_rosbag_capture.cpp  test_rosbag_entity_scope.test.py  test_rosbag_integration.test.py  test_snapshot_capture.cpp  test_sqlite_storage.cpp
src/ros2_medkit_fault_reporter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_fault_reporter/design/: index.rst
src/ros2_medkit_fault_reporter/src/: fault_reporter.cpp  local_filter.cpp
src/ros2_medkit_fault_reporter/test/: test_integration.test.py  test_local_filter.cpp
src/ros2_medkit_gateway/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_gateway/cmake/: SwaggerUI.cmake
src/ros2_medkit_gateway/config/: bringup_params.yaml  gateway_params.secure.yaml  gateway_params.yaml
src/ros2_medkit_gateway/design/: aggregation.rst  (+8 more)
src/ros2_medkit_integration_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ros2_medkit_log_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_serialization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_medkit_vda5050_msgs/: CMakeLists.txt  package.xml
(+1177 files in other folders)
