<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_medkit_param_beacon</name>
  <version>0.4.0</version>
  <description>Parameter-based beacon discovery plugin for ros2_medkit gateway</description>

  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ros2_medkit_cmake</buildtool_depend>

  <depend>ros2_medkit_beacon_common</depend>
  <depend>ros2_medkit_gateway</depend>
  <depend>rclcpp</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>libcpp-httplib-dev</depend>
  <depend>libssl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
