[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-medkit-docs"
version = "0.4.0"
description = "Documentation for ROS 2 Medkit"
authors = [{ name = "bburda", email = "bartoszburda93@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "sphinx==8.2.3",
    "sphinx-needs==6.3.0",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-plantuml==0.31",
    "matplotlib==3.10.8",
    "sphinx-design==0.7.0",
    "breathe==4.36.0",
    "sphinx-copybutton==0.5.2",
]

[project.optional-dependencies]
dev = ["sphinx-autobuild"]

[tool.setuptools]
# This is a documentation-only package, no Python modules
py-modules = []
packages = []
